--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "dependencies": {
-    "express": "^4.19.2",
-    "it": "^1.1.1",
-    "nodemon": "^3.1.4"
-  },
-  "name": "job",
+  "name": "jobportal",
   "version": "1.0.0",
-  "description": "jobpurpose",
-  "main": "server.js",
-  "devDependencies": {
-    "coffee-script": "^1.3.3"
-  },
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start":"node Server.js",
-   "server":"nodemon Server.js"
+    "start": "node main.js",
+    "main": "nodemon main.js"
   },
   "author": "geetha",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.4",
+    "nodemon": "^3.1.4",
+    "type": "^2.7.3"
+  }
 }
